z-index fix for recording info

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -75,6 +75,7 @@ header .container-xxl {
   padding: 1.25rem 0.75rem;
   font-size: .875rem;
   line-height: 1.5;
+  z-index: 99;
 }
 
 #recording-indicator-info:after, #recording-indicator-info:before {
